# kcalutils

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  KF5CalendarUtilsConfig.cmake.in  KPimCalendarUtilsConfig.cmake.in  Messages.sh  README.md  REUSE.toml  cppcheck-suppressions.xml  kcalutils.categories  kcalutils.renamecategories  metainfo.yaml
.reuse/: dep5
autotests/: CMakeLists.txt  test_config.h.cmake  test_config.h.in  testdndfactory.cpp  testdndfactory.h  testincidenceformatter.cpp  testincidenceformatter.h  teststringify.cpp  teststringify.h  testtodotooltip.cpp  testtodotooltip.h
autotests/data/: broken-template.html  event-1.html  event-2.html  event-2.ical  event-allday-multiday.html  event-allday-multiday.ical  event-allday.html  event-allday.ical  event-categories.html  event-categories.ical  event-exception-single.html  event-exception-single.ical  event-exception-thisandfuture.html  event-exception-thisandfuture.ical  event-multiday.html  event-multiday.ical  event-recurrence-single.out.html  freebusy-1.html  freebusy-1.ical  itip-event-accepted-reply.html  itip-event-accepted-reply.ical  itip-event-allday.html  itip-event-allday.ical  itip-event-counterproposal-declined.html  itip-event-counterproposal-declined.ical  itip-event-counterproposal.html  itip-event-counterproposal.ical  itip-event-delegation-reply.html  itip-event-delegation-reply.ical  itip-event-delegation-request.html  itip-event-delegation-request.ical  itip-event-multiday-allday.html  itip-event-multiday.html  itip-event-multiday.ical  itip-event-request.html  itip-event-request.ical  itip-event-tentative-reply.html  itip-event-tentative-reply.ical  itip-event-with-html-description.html  itip-event-with-html-description.ical  (+35 more)
cmake/: KPIMGrantleeMacros.cmake
po/ar/: libkcalutils5.po  libkcalutils6.po
po/ast/: libkcalutils5.po  libkcalutils6.po
po/az/: libkcalutils5.po  libkcalutils6.po
po/bg/: libkcalutils5.po  libkcalutils6.po
po/bs/: libkcalutils5.po  libkcalutils6.po
po/ca/: libkcalutils5.po  libkcalutils6.po
po/ca@valencia/: libkcalutils5.po  libkcalutils6.po
po/cs/: libkcalutils5.po  libkcalutils6.po
po/da/: libkcalutils5.po  libkcalutils6.po
po/de/: libkcalutils5.po  libkcalutils6.po
po/el/: libkcalutils5.po  libkcalutils6.po
po/en_GB/: libkcalutils5.po  libkcalutils6.po
po/eo/: libkcalutils5.po  libkcalutils6.po
po/es/: libkcalutils5.po  libkcalutils6.po
po/et/: libkcalutils5.po  libkcalutils6.po
po/eu/: libkcalutils5.po  libkcalutils6.po
po/fi/: libkcalutils5.po  libkcalutils6.po
po/fr/: libkcalutils5.po  libkcalutils6.po
po/ga/: libkcalutils5.po  libkcalutils6.po
po/gl/: libkcalutils5.po  libkcalutils6.po
po/he/: libkcalutils6.po
po/hi/: libkcalutils6.po
po/hr/: libkcalutils5.po  libkcalutils6.po
po/hu/: libkcalutils5.po  libkcalutils6.po
po/ia/: libkcalutils5.po  libkcalutils6.po
po/it/: libkcalutils5.po  libkcalutils6.po
po/ja/: libkcalutils5.po  libkcalutils6.po
po/ka/: libkcalutils5.po  libkcalutils6.po
po/kk/: libkcalutils5.po  libkcalutils6.po
po/km/: libkcalutils5.po  libkcalutils6.po
po/ko/: libkcalutils5.po  libkcalutils6.po
po/lt/: libkcalutils5.po  libkcalutils6.po
po/mai/: libkcalutils5.po  libkcalutils6.po
po/mr/: libkcalutils5.po  libkcalutils6.po
po/nb/: libkcalutils5.po  libkcalutils6.po
po/nds/: libkcalutils5.po  libkcalutils6.po
po/nl/: libkcalutils5.po  libkcalutils6.po
po/nn/: libkcalutils5.po  libkcalutils6.po
po/pa/: libkcalutils5.po  libkcalutils6.po
po/pl/: libkcalutils5.po  libkcalutils6.po
po/pt/: libkcalutils5.po  libkcalutils6.po
po/pt_BR/: libkcalutils5.po  libkcalutils6.po
po/ro/: libkcalutils5.po  libkcalutils6.po
po/ru/: libkcalutils5.po  libkcalutils6.po
po/sa/: libkcalutils6.po
po/se/: libkcalutils5.po  libkcalutils6.po
po/sk/: libkcalutils5.po  libkcalutils6.po
po/sl/: libkcalutils5.po  libkcalutils6.po
po/sr/: libkcalutils5.po  libkcalutils6.po
po/sr@ijekavian/: libkcalutils5.po  libkcalutils6.po
po/sr@ijekavianlatin/: libkcalutils5.po  libkcalutils6.po
po/sr@latin/: libkcalutils5.po  libkcalutils6.po
po/sv/: libkcalutils5.po  libkcalutils6.po
po/ta/: libkcalutils5.po  libkcalutils6.po
po/tr/: libkcalutils5.po  libkcalutils6.po
po/ug/: libkcalutils5.po  libkcalutils6.po
po/uk/: libkcalutils5.po  libkcalutils6.po
po/zh_CN/: libkcalutils5.po  libkcalutils6.po
po/zh_TW/: libkcalutils5.po  libkcalutils6.po
scripts/: extract_strings_ki18n.py
src/: CMakeLists.txt  config-kcalutils.h.cmake  config-kcalutils.h.in  dndfactory.cpp  dndfactory.h  grantleeki18nlocalizer.cpp  grantleeki18nlocalizer_p.h  grantleetemplatemanager.cpp  grantleetemplatemanager_p.h  htmlexport.cpp  htmlexport.h  htmlexportsettings.kcfg  htmlexportsettings.kcfgc  icaldrag.cpp  icaldrag.h  incidenceformatter.cpp  incidenceformatter.h  kcalutils-index.qdoc  kcalutils.qdoc  kcalutils.qdocconf  kcalutils_debug.cpp  kcalutils_debug.h  kcalutils_private_export.h  qtresourcetemplateloader.cpp  qtresourcetemplateloader.h  recurrenceactions.cpp  recurrenceactions.h  scheduler.cpp  scheduler.h  stringify.cpp  stringify.h  templates.qrc  vcaldrag.cpp  vcaldrag.h
src/grantlee_plugin/: CMakeLists.txt  datetimefilters.cpp  datetimefilters.h  icon.cpp  icon.h  kcalendargrantleeplugin.cpp  kcalendargrantleeplugin.h
src/templates/: attendee_row.html  event.html  freebusy.html  incidence_header.html  itip.html  itip_event.html  itip_freebusy.html  itip_journal.html  itip_todo.html  journal.html  template_base.html  todo.html
templates/: CMakeLists.txt  attendee_row.html  event.html  freebusy.html  itip.html  itip_event.html  itip_freebusy.html  itip_journal.html  itip_todo.html  journal.html  todo.html
